[project]
name = "mcp-bzm-apim"
version = "1.0.0"
description = "MCP Server for BlazeMeter API Monitoring (formerly Runscope)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.19.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
]

[project.scripts]
mcp-bzm-apim = "main:main"

[tool.pycodestyle]
max-line-length = 108

