[project]
name = "mcp-bzm-apitest"
version = "1.0.0"
description = "MCP Server for BlazeMeter API Monitoring (Runscope)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.19.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
    "pyinstaller>=6.16.0",
    "defusedxml>=0.7.1",
    "nh3>=0.3.2",
]

[project.scripts]
mcp-bzm-apim = "main:main"

[tool.pycodestyle]
max-line-length = 108

